deploy/base/openehr-nodes/zio/transform-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zio-transform-rest
  namespace: dh-health
  labels:
    app: zio-transform-rest
    ehr-node-name: zio
spec:
  selector:
    matchLabels:
      app: zio-transform-rest
  template:
    metadata:
      labels:
        app: zio-transform-rest
    spec:
      containers:
      - name: zio-transform-rest
        image: registry.prod.dh.unimaas.nl/docker-health/transform-rest:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: transform-rest-logs
          mountPath: /var/log/zio
          subPath: zio/transform-rest
      volumes:
      - name: transform-rest-logs
        persistentVolumeClaim:
          claimName: log-pvc
