deploy/base/openehr-nodes/zio/transform-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zio-transform-rest
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: zio-transform-rest
